tests/test_files/valid/scheduling/finished_by_move.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Location warehouse1
    id: "0x4711"
    type: "pallet"
End

Location production1
    id: "0x4712"
    type: "pallet"
End

Event manualLoadingConfirmation
    id : "buttonFtfIsLoaded"
    value : false
End

TransportOrderStep tosWarehouse1
    Location warehouse1
End

MoveOrderStep mosWarehouse1
    Location warehouse1
End

TransportOrderStep tosProduction1
    Location production1
End

Task mainTask
    helloWorld
End

Task helloWorld
    Transport
    From tosWarehouse1
    To tosProduction1

    Move 
    To mosWarehouse1

    FinishedBy manualLoadingConfirmation.value
End
