tests/test_files/invalid/syntax/task_misspelled_from.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Task helloWorld
    Transport
    Frm tosWarehouse1
    To tosProduction1
End
